cmake_minimum_required (VERSION 3.14)

include("${ENGINE_CMAKE_DIRECTORY}/MakePlugin.cmake")
include("${ENGINE_CMAKE_DIRECTORY}/DeployBinaryDependencies.cmake")
include("${ENGINE_CMAKE_DIRECTORY}/LinkPlugin.cmake")

MakePlugin(72D83E65-B5D9-4CCD-8B8B-8227C805570E ${CMAKE_CURRENT_LIST_DIR} "AssetCompilerCore" "lib" "bin" "../AssetCompilerCore.nplugin")

if(NOT TARGET 4F6B545D-F826-4BAE-9A41-CD5149979D8D)
	add_subdirectory("${CORE_ROOT_DIRECTORY}/DefaultPlugins/Editor/Common/Code" "${CMAKE_BINARY_DIR}/4F6B545D-F826-4BAE-9A41-CD5149979D8D")
endif()
LinkPlugin(72D83E65-B5D9-4CCD-8B8B-8227C805570E 4F6B545D-F826-4BAE-9A41-CD5149979D8D)

if(NOT TARGET 4CC21FD4-730F-475D-9807-FBF9E5595308)
	add_subdirectory("${CORE_ROOT_DIRECTORY}/DefaultPlugins/Animation/Code" "${CMAKE_BINARY_DIR}/4CC21FD4-730F-475D-9807-FBF9E5595308")
endif()
LinkPlugin(72D83E65-B5D9-4CCD-8B8B-8227C805570E 4CC21FD4-730F-475D-9807-FBF9E5595308)

if(NOT TARGET AAEA95B0-9B18-442D-B043-0629481E8C95)
	add_subdirectory("${CORE_ROOT_DIRECTORY}/DefaultPlugins/Widgets/Code" "${CMAKE_BINARY_DIR}/AAEA95B0-9B18-442D-B043-0629481E8C95")
endif()
LinkPlugin(72D83E65-B5D9-4CCD-8B8B-8227C805570E AAEA95B0-9B18-442D-B043-0629481E8C95)

if(NOT TARGET F6C31290-CB03-452C-B3DE-78F19A8CF943)
	add_subdirectory("${CORE_ROOT_DIRECTORY}/DefaultPlugins/Physics/PhysicsCore/Code" "${CMAKE_BINARY_DIR}/F6C31290-CB03-452C-B3DE-78F19A8CF943")
endif()
LinkPlugin(72D83E65-B5D9-4CCD-8B8B-8227C805570E F6C31290-CB03-452C-B3DE-78F19A8CF943)

if(NOT TARGET B7921721-4029-47CE-873C-5D356D604AA9)
	add_subdirectory("${CORE_ROOT_DIRECTORY}/DefaultPlugins/Graphics/DeferredShading/Code" "${CMAKE_BINARY_DIR}/B7921721-4029-47CE-873C-5D356D604AA9")
endif()
LinkPlugin(72D83E65-B5D9-4CCD-8B8B-8227C805570E B7921721-4029-47CE-873C-5D356D604AA9)

if(NOT TARGET a4bbf061-5f65-43b1-acc0-711f28b3bb56)
	add_subdirectory("${CORE_ROOT_DIRECTORY}/DefaultPlugins/Audio/AudioCore/Code" "${CMAKE_BINARY_DIR}/a4bbf061-5f65-43b1-acc0-711f28b3bb56")
endif()
LinkPlugin(72D83E65-B5D9-4CCD-8B8B-8227C805570E a4bbf061-5f65-43b1-acc0-711f28b3bb56)

if (PLATFORM_LINUX)
	find_package(TIFF REQUIRED)
else()
	set(TIFF_INCLUDE_DIR "${CMAKE_CURRENT_LIST_DIR}/Private/3rdparty/tiff/include/libtiff")
	set(TIFF_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/Private/3rdparty/tiff/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}/${CMAKE_STATIC_LIBRARY_PREFIX}tiff")
	find_package(TIFF)
endif()

if(TIFF_FOUND)
	if (PLATFORM_LINUX)
		target_link_libraries(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE "${TIFF_LIBRARY}")
	else()
		target_link_libraries(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE "${TIFF_LIBRARY}${CMAKE_STATIC_LIBRARY_SUFFIX}")	
	endif()

	if(PLATFORM_APPLE_MACOS)
		set(JPEG_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/Private/3rdparty/jpeg/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}/${CMAKE_STATIC_LIBRARY_PREFIX}jpeg.a")
		target_link_libraries(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE ${JPEG_LIBRARY})

		if(PLATFORM_ARM)
			set(PNG_LIBRARY "${CMAKE_CURRENT_LIST_DIR}/Private/3rdparty/libpng/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}/${CMAKE_STATIC_LIBRARY_PREFIX}png.a")
			target_link_libraries(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE ${PNG_LIBRARY})
		endif()

		find_package(BZip2 REQUIRED)
		target_link_libraries(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE ${BZIP2_LIBRARIES})
		find_package(ZLIB REQUIRED)
 	elseif(PLATFORM_EMSCRIPTEN)
 		target_link_options(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE -USE_ZLIB=1)
 	elseif(PLATFORM_APPLE_VISIONOS)
 		target_link_libraries(72D83E65-B5D9-4CCD-8B8B-8227C805570E PUBLIC -lz)
	endif()

	target_compile_definitions(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE -DSUPPORT_TIFF=1)
endif()

set(BZ2_DIR "${CMAKE_CURRENT_LIST_DIR}/Private/3rdparty/bzip2")
if (PLATFORM_WINDOWS)
	target_link_libraries(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE "${BZ2_DIR}/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}/${CMAKE_STATIC_LIBRARY_PREFIX}bz2${CMAKE_STATIC_LIBRARY_SUFFIX}")
endif()

target_include_directories(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE "${CMAKE_CURRENT_LIST_DIR}/Private/3rdparty/compressonator/include")
set(COMPRESSONATOR_LIB_PATH "${CMAKE_CURRENT_LIST_DIR}/Private/3rdparty/compressonator/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}")
target_link_libraries(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE "${COMPRESSONATOR_LIB_PATH}/${CMAKE_STATIC_LIBRARY_PREFIX}CMP_Compressonator${CMAKE_STATIC_LIBRARY_SUFFIX}")
if (PLATFORM_WINDOWS OR PLATFORM_LINUX OR PLATFORM_APPLE_MACOS)
	target_link_libraries(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE "${COMPRESSONATOR_LIB_PATH}/${CMAKE_STATIC_LIBRARY_PREFIX}CMP_Framework${CMAKE_STATIC_LIBRARY_SUFFIX}")
endif()
if (PLATFORM_LINUX OR PLATFORM_APPLE_MACOS)
	target_link_libraries(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE "${COMPRESSONATOR_LIB_PATH}/${CMAKE_STATIC_LIBRARY_PREFIX}CMP_Core${CMAKE_STATIC_LIBRARY_SUFFIX}")
endif()
target_compile_definitions(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE -DSUPPORT_COMPRESSONATOR=1)

if (NOT PLATFORM_WEB)
	set(ASSIMP_LIB_DIR "${CMAKE_CURRENT_LIST_DIR}/Private/3rdparty/assimp/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}")

	target_link_libraries(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE "${ASSIMP_LIB_DIR}/${CMAKE_STATIC_LIBRARY_PREFIX}assimp${CMAKE_STATIC_LIBRARY_SUFFIX}")
	target_include_directories(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE "${CMAKE_CURRENT_LIST_DIR}/Private/3rdparty/assimp/include")
	target_compile_definitions(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE -DSUPPORT_ASSIMP=1)
else()
	target_compile_definitions(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE -DSUPPORT_ASSIMP=0)
endif()

set(GLSLANGVALIDATOR_EXECUTABLE "${CMAKE_CURRENT_LIST_DIR}/Private/3rdparty/vulkan/${PLATFORM_NAME}/${HOST_ARCHITECTURE}/glslangValidator${CMAKE_EXECUTABLE_SUFFIX}")
if(PLATFORM_DESKTOP AND EXISTS ${GLSLANGVALIDATOR_EXECUTABLE})
	file(MAKE_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/vulkan)
	file(COPY_FILE "${GLSLANGVALIDATOR_EXECUTABLE}" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/vulkan/glslangValidator${CMAKE_EXECUTABLE_SUFFIX}" ONLY_IF_DIFFERENT)
	target_compile_definitions(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE -DHAS_GLSLANGVALIDATOR=1)
else()
	target_compile_definitions(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE -DHAS_GLSLANGVALIDATOR=0)
endif()

set(SPIRVOPT_EXECUTABLE "${CMAKE_CURRENT_LIST_DIR}/Private/3rdparty/vulkan/${PLATFORM_NAME}/${HOST_ARCHITECTURE}/spirv-opt${CMAKE_EXECUTABLE_SUFFIX}")
if(PLATFORM_DESKTOP AND EXISTS ${SPIRVOPT_EXECUTABLE})
	file(MAKE_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/vulkan)
	file(COPY_FILE "${SPIRVOPT_EXECUTABLE}" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/vulkan/spirv-opt${CMAKE_EXECUTABLE_SUFFIX}" ONLY_IF_DIFFERENT)
	target_compile_definitions(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE -DHAS_SPIRVOPT=1)
else()
	target_compile_definitions(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE -DHAS_SPIRVOPT=0)
endif()

set(TINT_EXECUTABLE "${CMAKE_CURRENT_LIST_DIR}/Private/3rdparty/tint/bin/${PLATFORM_NAME}/${HOST_ARCHITECTURE}/tint${CMAKE_EXECUTABLE_SUFFIX}")
if(PLATFORM_DESKTOP AND EXISTS ${TINT_EXECUTABLE})
	file(MAKE_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/tint)
	file(COPY_FILE "${TINT_EXECUTABLE}" "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/tint/tint${CMAKE_EXECUTABLE_SUFFIX}" ONLY_IF_DIFFERENT)
	target_compile_definitions(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE -DHAS_TINT=1)
else()
	target_compile_definitions(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE -DHAS_TINT=0)
endif()

target_link_libraries(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE "${CMAKE_CURRENT_LIST_DIR}/Private/3rdparty/astc-encoder/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}/${CMAKE_STATIC_LIBRARY_PREFIX}astcenc${CMAKE_STATIC_LIBRARY_SUFFIX}")
target_compile_definitions(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE -DSUPPORT_ASTCENC=1)

# Luna SVG
if(PLATFORM_WEBASSEMBLY)
	# TODO: Compile static library
	target_compile_definitions(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE -DSUPPORT_LUNASVG=0)
else()
	target_link_libraries(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE "${CMAKE_CURRENT_LIST_DIR}/Private/3rdparty/lunasvg/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}/${CMAKE_STATIC_LIBRARY_PREFIX}lunasvg${CMAKE_STATIC_LIBRARY_SUFFIX}")
	target_compile_definitions(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE -DSUPPORT_LUNASVG=1)
endif()

if(PLATFORM_WEBASSEMBLY)
	# TODO: Compile static library
	target_compile_definitions(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE -DSUPPORT_LIBKTX=0)
	target_link_libraries(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE "${CMAKE_CURRENT_LIST_DIR}/Private/3rdparty/zlib/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}/${CMAKE_STATIC_LIBRARY_PREFIX}zlib${CMAKE_STATIC_LIBRARY_SUFFIX}")
else()
	target_link_libraries(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE "${CMAKE_CURRENT_LIST_DIR}/Private/3rdparty/libktx/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}/${CMAKE_STATIC_LIBRARY_PREFIX}ktx_read${CMAKE_STATIC_LIBRARY_SUFFIX}")
	if(PLATFORM_WINDOWS)
		target_link_libraries(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE "${CMAKE_CURRENT_LIST_DIR}/Private/3rdparty/libktx/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}/${CMAKE_STATIC_LIBRARY_PREFIX}zstd_static${CMAKE_STATIC_LIBRARY_SUFFIX}")
		target_link_libraries(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE "${CMAKE_CURRENT_LIST_DIR}/Private/3rdparty/zlib/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}/${CMAKE_STATIC_LIBRARY_PREFIX}zlib${CMAKE_STATIC_LIBRARY_SUFFIX}")
	elseif(PLATFORM_ANDROID OR PLATFORM_LINUX)
		find_package(ZLIB REQUIRED)
		target_link_libraries(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE ZLIB::ZLIB)
	elseif(NOT PLATFORM_APPLE_VISIONOS)
		target_link_libraries(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE "${CMAKE_CURRENT_LIST_DIR}/Private/3rdparty/libktx/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}/${CMAKE_STATIC_LIBRARY_PREFIX}zstd${CMAKE_STATIC_LIBRARY_SUFFIX}")
	endif()
	target_compile_definitions(72D83E65-B5D9-4CCD-8B8B-8227C805570E PRIVATE -DSUPPORT_LIBKTX=1)
endif()
