cmake_minimum_required (VERSION 3.14)

include("${ENGINE_CMAKE_DIRECTORY}/MakePlugin.cmake")

MakePlugin(087DEE23-94E5-44D9-88E9-AF82B784F025 ${CMAKE_CURRENT_LIST_DIR} "Backend" "lib" "bin" "../Backend.nplugin")

if (NOT DEFINED OPTION_BACKEND_PRODUCTION_DOMAIN_KEY)
	set(OPTION_BACKEND_PRODUCTION_DOMAIN_KEY "r7pznz29" CACHE STRING "The production backend domain key for the active app")
endif()
target_compile_definitions(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE BACKEND_PRODUCTION_DOMAIN_KEY="${OPTION_BACKEND_PRODUCTION_DOMAIN_KEY}")

if (NOT DEFINED OPTION_BACKEND_PRODUCTION_GAME_KEY)
	set(OPTION_BACKEND_PRODUCTION_GAME_KEY "dev_275d0229cb79422187b27b908218d265" CACHE STRING "The production backend domain game api key for the active app")
endif()
target_compile_definitions(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE BACKEND_PRODUCTION_GAME_KEY="${OPTION_BACKEND_PRODUCTION_GAME_KEY}")

if (OPTION_BACKEND_PRODUCTION_SERVER_KEY)
	set(OPTION_BACKEND_PRODUCTION_SERVER_KEY "dev_200c4fd95c4c41c1a7fea3e4967bb8e1" CACHE STRING "The production backend domain server api key for the active app")
endif()
target_compile_definitions(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE BACKEND_PRODUCTION_SERVER_KEY="${OPTION_BACKEND_PRODUCTION_SERVER_KEY}")

if (NOT DEFINED OPTION_BACKEND_STAGING_DOMAIN_KEY)
	set(OPTION_BACKEND_STAGING_DOMAIN_KEY "r7pznz29" CACHE STRING "The staging environment backend domain key for the active app")
endif()
target_compile_definitions(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE BACKEND_STAGING_DOMAIN_KEY="${OPTION_BACKEND_STAGING_DOMAIN_KEY}")

if (NOT DEFINED OPTION_BACKEND_STAGING_GAME_KEY)
	set(OPTION_BACKEND_STAGING_GAME_KEY "dev_e9171a9ccf7d4bf787db10acab0db7ff" CACHE STRING "The staging backend domain game api key for the active app")
endif()
target_compile_definitions(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE BACKEND_STAGING_GAME_KEY="${OPTION_BACKEND_STAGING_GAME_KEY}")

if (NOT DEFINED OPTION_BACKEND_STAGING_SERVER_KEY)
	set(OPTION_BACKEND_STAGING_SERVER_KEY "dev_c3b2c96956934a0ea05de8254f4b4854" CACHE STRING "The staging backend domain server api key for the active app")
endif()
target_compile_definitions(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE BACKEND_STAGING_SERVER_KEY="${OPTION_BACKEND_STAGING_SERVER_KEY}")

if (NOT DEFINED OPTION_BACKEND_LOCAL_DOMAIN_KEY)
	set(OPTION_BACKEND_LOCAL_DOMAIN_KEY "r7pznz29" CACHE STRING "The local environment backend domain key for the active app")
endif()
target_compile_definitions(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE BACKEND_LOCAL_DOMAIN_KEY="${OPTION_BACKEND_LOCAL_DOMAIN_KEY}")

if (NOT DEFINED OPTION_BACKEND_LOCAL_GAME_KEY)
	set(OPTION_BACKEND_LOCAL_GAME_KEY "dev_e9171a9ccf7d4bf787db10acab0db7ff" CACHE STRING "The local backend domain game api key for the active app")
endif()
target_compile_definitions(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE BACKEND_LOCAL_GAME_KEY="${OPTION_BACKEND_LOCAL_GAME_KEY}")

if (NOT DEFINED OPTION_BACKEND_LOCAL_SERVER_KEY)
	set(OPTION_BACKEND_LOCAL_SERVER_KEY "dev_c3b2c96956934a0ea05de8254f4b4854" CACHE STRING "The local backend domain server api key for the active app")
endif()
target_compile_definitions(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE BACKEND_LOCAL_SERVER_KEY="${OPTION_BACKEND_LOCAL_SERVER_KEY}")


if(NOT TARGET 4732DB7A-619B-421E-8569-BF31F607BBB7)
	add_subdirectory("${CORE_ROOT_DIRECTORY}/DefaultPlugins/Networking/Http/Code" "${CMAKE_BINARY_DIR}/4732DB7A-619B-421E-8569-BF31F607BBB7")
endif()
LinkPlugin(087DEE23-94E5-44D9-88E9-AF82B784F025 4732DB7A-619B-421E-8569-BF31F607BBB7)

if (PLATFORM_DESKTOP)
	set(STEAM_DIRECTORY_PATH "${CMAKE_CURRENT_LIST_DIR}/Private/3rdparty/Steam" CACHE INTERNAL "")
	if (EXISTS STEAM_DIRECTORY_PATH)
		option(USE_STEAM_SDK "Use Steam SDK" ON)
		if (USE_STEAM_SDK)
			if (PLATFORM_WINDOWS)
				target_link_libraries(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE "${STEAM_DIRECTORY_PATH}/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}/steam_api64.lib")
				DeployBinaryDependency("${STEAM_DIRECTORY_PATH}/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}/steam_api64.dll")
			elseif(PLATFORM_APPLE_MACOS)
				target_link_libraries(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE "${STEAM_DIRECTORY_PATH}/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}/${CMAKE_SHARED_LIBRARY_PREFIX}steam_api${CMAKE_SHARED_LIBRARY_SUFFIX}")
				DeployBinaryDependency("${STEAM_DIRECTORY_PATH}/lib/MacOS/x86_64/${CMAKE_SHARED_LIBRARY_PREFIX}steam_api${CMAKE_SHARED_LIBRARY_SUFFIX}")
			else()
				target_link_libraries(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE "${STEAM_DIRECTORY_PATH}/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}/${CMAKE_SHARED_LIBRARY_PREFIX}steam_api${CMAKE_SHARED_LIBRARY_SUFFIX}")
				DeployBinaryDependency("${STEAM_DIRECTORY_PATH}/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}/${CMAKE_SHARED_LIBRARY_PREFIX}steam_api${CMAKE_SHARED_LIBRARY_SUFFIX}")
			endif()	
			target_include_directories(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE "${STEAM_DIRECTORY_PATH}/include")
			target_compile_definitions(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE USE_STEAM=1)
		else()
			target_compile_definitions(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE USE_STEAM=0)
		endif()
	else()
		target_compile_definitions(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE USE_STEAM=0)
	endif()
else()
	target_compile_definitions(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE USE_STEAM=0)
endif()

if(PLATFORM_APPLE_IOS AND NOT PLATFORM_APPLE_VISIONOS)
	set(GOOGLESIGNIN_DIRECTORY_PATH "${CMAKE_CURRENT_LIST_DIR}/Private/3rdparty/GoogleSignIn" CACHE INTERNAL "")

	target_link_libraries(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE "${GOOGLESIGNIN_DIRECTORY_PATH}/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}/AppAuth")
	target_link_libraries(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE "${GOOGLESIGNIN_DIRECTORY_PATH}/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}/GoogleSignIn")
	target_link_libraries(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE "${GOOGLESIGNIN_DIRECTORY_PATH}/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}/GTMAppAuth")
	target_link_libraries(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE "${GOOGLESIGNIN_DIRECTORY_PATH}/lib/${PLATFORM_NAME}/${PLATFORM_ARCHITECTURE}/GTMSessionFetcher")

	target_include_directories(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE "${GOOGLESIGNIN_DIRECTORY_PATH}/include")
	target_compile_definitions(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE HAS_GOOGLE_SIGN_IN_SDK=1)

	target_link_libraries(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE "-framework CoreGraphics")
	target_link_libraries(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE "-framework CoreText")
	target_link_libraries(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE "-framework Foundation")
	target_link_libraries(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE "-framework AuthenticationServices")
	target_link_libraries(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE "-framework LocalAuthentication")
	target_link_libraries(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE "-framework SafariServices")
	target_link_libraries(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE "-framework SystemConfiguration")
	target_link_libraries(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE "-framework Security")
	target_link_libraries(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE "-framework UIKit")
	target_link_libraries(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE "-framework PassKit")

	target_link_libraries(087DEE23-94E5-44D9-88E9-AF82B784F025 PRIVATE -ObjC)
else()
	target_compile_definitions(087DEE23-94E5-44D9-88E9-AF82B784F025  PRIVATE HAS_GOOGLE_SIGN_IN_SDK=0)
endif()

if(PLATFORM_APPLE) 
    set_source_files_properties("${CMAKE_CURRENT_LIST_DIR}/Private/Game.cpp" PROPERTIES LANGUAGE OBJCXX)
    set_source_files_properties("${CMAKE_CURRENT_LIST_DIR}/Private/Plugin.cpp" PROPERTIES LANGUAGE OBJCXX)
endif()

if (PLATFORM_WEB)
  list(APPEND EXPORTED_FUNCTIONS _onGoogleSignIn)
  list(APPEND EXPORTED_FUNCTIONS _onAppleSignIn)
endif()